# pytorch-scikit-learn-uv-docker-serverless-model-deployment-aws-lambda

./: .dockerignore  Dockerfile  HW9.ipynb  HW9_ONNX_format_for_neural_network_models.ipynb  README.md  deploy.ps1  deploy.sh  lambda_function.py  local_test.py  main.py  pyproject.toml  test_lambda.py
lambda/: lambda_function.py
train/: train.py
