[project]
name = "pytorch-scikit-learn-uv-docker-serverless-model-deployment-aws-lambda"
version = "0.1.0"
requires-python = ">=3.13"   # Lambda-compatible
description = "SKL model Lambda"
readme = "README.md"


dependencies = [
    "scikit-learn>=1.7.1",
    "boto3>=1.42.5",
    "requests>=2.32.5",
]

